<resources>
    <string name="app_name">LuckySpin</string>
    <string name="appName">LuckySpin</string>
    <string name="appTitle">LuckySpin</string>
    <string name="loginWelcome">Bem vindo de volta.</string>
    <string name="textTitleInputUsername">Introduza o seu nome de utilizador</string>
    <string name="textInputUsername">Nome de utilizador</string>
    <string name="textTitleInputPassword">Introduza a sua Palavra-Passe</string>
    <string name="textInputPassword">Palavra-Passe</string>
    <string name="loginForgotPassword">Forgot password?</string>
    <string name="btnLogin">Iniciar Sessão</string>
    <string name="loginRegisterText">Sem conta? Crie aqui!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="roulette">Roleta</string>
    <string name="result">Resultado</string>
    <string name="black">Preto</string>
    <string name="red">Vermelho</string>
    <string name="green">Verde</string>
    <string name="amount">$Aposta</string>
    <string name="spin">Girar</string>
    <string name="betValueDefault">100</string>
    <string name="sensor_on">Sensor Ligado</string>
    <string name="settings">Definições</string>
    <string name="vibrar_ativo">Vibrar Ativo</string>
    <string name="como_jogar">Como jogar!</string>
    <string name="username">Nome de Utilizador</string>
    <string name="creditos">Créditos</string>
    <string name="email">Email</string>
    <string name="alterar_dados">Alterar Dados</string>
    <string name="escreva_a_sua_palavra_passe">Palavra-Passe</string>
    <string name="terminar_sess_o">Terminar Sessão</string>
    <string name="eliminar_conta">Eliminar Conta</string>
    <string name="palavra_npasse">Confirme \nAlterações</string>
    <string name="nova_npalavra_npasse">Nova \nPalavra-\nPasse</string>
    <string name="nova_palavra_passe">Nova Palavra-Passe</string>
    <string name="regista_te_e_joga">Regista-te e Joga!</string>
    <string name="introduza_o_seu_email">Introduza o seu Email</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="sobre_nos">Sobre Nós</string>
    <string name="nome_nutilizador">Nome \nUtilizador</string>
    <string name="aboutCurso">Engenharia Informática</string>
    <string name="aboutUC">Desenvolvimento de Aplicações Móveis</string>
    <string name="nome_dev1">Diogo Filipe Videira dos Santos Larangeira</string>
    <string name="nome_dev2">Rúben Filipe Alcobia Dias</string>
    <string name="n_dev_1">Nº 24993</string>
    <string name="n_dev_2">Nº 24705</string>
    <string name="ano_letivo">2024/2025</string>
    <string name="fontes"><![CDATA[Fontes De Consulta \n\n - Leitura e Escrita em ficheiros: https://www.youtube.com/watch?v=Ir9qeQqw-48&t=602s \n\n -Sensor Acelerómetro: https://www.youtube.com/watch?v=xcsuDDQHrLo&t=371s \n\n Utilização da API sheety desenvolvida pela google. Versão grátis. 200 Request por mês]]></string>
    <string name="voltar">Voltar</string>
    <string name="btnDeposit">Depositar</string>
    <string name="insertDeposit">Insira valor</string>
    <string name="txtDepositar">Depositar Créditos</string>
    <string name="n_telemovel">Número de telefone MB WAY</string>
</resources>