<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- TextView do título-->
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="40sp"
        android:textStyle="bold"
        />

    <!-- ImageView do Icon-->
    <ImageView
        android:id="@+id/imagemIcon"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/roleta"/>

    <!-- Botão para iniciar sessão-->
    <Button
        android:id="@+id/startButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_below="@id/imagemIcon"
        android:backgroundTint="@null"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/btnLogin" />

    <!-- Botão para o sobre nós-->
    <Button
        android:id="@+id/about"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@null"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/sobre_nos" />
</RelativeLayout>
</ScrollView>